fix: alignment on project solved, presentation height solved

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,10 +1,12 @@
 .main-section {
    display: flex;
    flex-direction: row;
-   align-items: flex-start;
+   align-items: baseline;
    padding: 50px 20px 50px ;
    font-size: 2em;
  }
+
+
  
  .main-section .title {
    color: rgb(0, 159, 227);
@@ -22,9 +24,8 @@
  }
 
  h2 {
-   vertical-align: top;
-  font-size: 1.5em;
-  margin-bottom: 9px;
+    font-size: 1.5em;
+    margin-bottom: 9px;
  }
 
  h3 {
