--- a/src/components/Main/Presentation/Presentation.css
+++ b/src/components/Main/Presentation/Presentation.css
@@ -1,11 +1,11 @@
 .presentation {
-   height: 100vh;
+   min-height: 100vh;
    display: flex;
    flex-direction: column;
-   justify-content: center;
-   
+   justify-content: center;   
    padding: 120px 100px;
    font-size: 2.5rem;
+   border: 1px solid black;
 }
 
 .presentation-title {
